--- a/source/_posts/骑行的起点.md
+++ b/source/_posts/骑行的起点.md
@@ -1,6 +1,7 @@
 ---
 title: 骑行的起点
 date: 2022-06-06
+tag: 骑行
 ---
 #### 学车
 - 最早学习骑自行车，还是10-11岁左右。妈妈加班，我便在她单位的水泥硬地上进行练习，摔得跟头不算多，学得还算顺利。那个时候刚刚从良种场搬到市区没多久，住在糖厂山上，要骑好久的自行车才能到妈妈的单位。没有自行车以前，都是坐3路公交车上学，每个月要去长青公园门口的指定地点买学生的月票。4年级（11岁左右）开始骑车上学，往返四趟，一天16km。有些老师、同学问我住哪，我回复道糖厂山上。之所以叫“糖厂山上”，是赤峰一个知名的制糖工厂的所在地，糖厂门口右拐，有个又高又长的大坡，正是因为这个坡太大了，所以大家都叫“糖厂山上”。正是糖厂山上这个大坡+每天4趟共计16km骑行+偶尔的大风天气，练就了我现在的麒麟腿，也就是大粗腿（现在买裤子都不能随便买，一定要去试）。
