--- a/source/_posts/一点让上帝发笑的思考.md
+++ b/source/_posts/一点让上帝发笑的思考.md
@@ -12,3 +12,4 @@ tag: 思考
 - 关于装B这个事，陈丹青说：我喜欢装B这个词，我从小就装B，装成了现在；也有人说：Fake it until you make it. 要一直装下去，然后就成真的了。这就是“皮格马利翁效应”。回想自己过去的很多年，装着爱学习、装着爱读书，可能还没真的装成，但确实学习到了一些知识。
 - 在工作的前2-3年，内心的冲突很严重，主要是学校教的是一套逻辑和准则，而社会生活是完全另外一种游戏，社会已经不是教育我了，而是在“教训”我。以前，自己对社会的认识中大家应该讲究规则和规范，而社会生活考虑的维度呈指数级上升，背后更多考虑的是人与人之间的利益联系。这背后的逻辑以及形成的冲突成为了众多电影中的主旋律。有一部电影的台词，甚至成为了热门网络用语，韩寒在电影《后会无期》的台词里写到：只有小孩子才分对错，成年人只看利弊。韩寒在后续的采访中进行了解释，完全是为了电影情境编写的台词，只适用于当时的电影情境。韩寒算是为了政治正确，为了避免被观众误解，赶紧往回找补。知名心理学家劳伦斯·科尔伯格(Lawrence Kohlberg)在道德与利弊方面做了20多年的实证研究，形成了道德发展阶段论，结论是利弊与对错呈现犬牙交错的分布状况，导致“小孩也看利弊，大人也分对错”，而不是随着年龄单向发展。随着道德发展阶段的上升，利弊与对错的界限愈发不明显，呈现逐渐融合的趋势。当然，韩寒电影中的台词形成了普遍的观众共鸣，这仍然值得思考，对于大多数小镇做题者来说，学校是我们进入这个世界的入口，进入社会后生活才刚刚开始。无论是学校里的教育，还是社会生活的“教训”，归根结底都是让我们能够心安理得地成为那个更完整的自己。相信在后续的工作中，仍然会遇到各种复杂的情境，我能做到最基本的是不违反法律，不违背道德，不危害他人，守住自己的内心。内心坦荡与无忧，把手头的事情做好，这应该就是最洒脱的工作状态了吧。
 - 彼得·德鲁克：“如果你无法量化它，就无法改进它”。当前，这就是很多团队存在的问题。
+- 越来越感觉自己无法胜任管理岗位，涉及大量的沟通工作，实在提不起兴趣，尽量做技术管理
