--- a/source/_posts/2023年的一些目标.md
+++ b/source/_posts/2023年的一些目标.md
@@ -25,12 +25,15 @@ tag: 年度目标
    - 《软技能》--待读
    - 《财富池》--待读
    - 《我的经验与教训》--待读
-3. 学一些财经知识，挣点零花钱，抓住2023年的小牛，不挣最后一个铜板
+3. 学一些财经知识
+   - 挣点零花钱，抓住2023年的小牛，不挣最后一个铜板（2023.1）
+   - 少亏点（2023.9）
+4. 《金融电子化》文章被录用
 
 ### 家庭
 1. b
 2. 旅行1次(complete)：带爸妈旅行，准备南方过冬计划
-3. 熟练开车（complete）：具备上高架的水平
+3. 熟练开车（complete）：具备上高架的水平（已完成，都上高速了）
 4. 骑行：2023年全年骑行1000公里
 
 ### 工作
@@ -38,11 +41,11 @@ tag: 年度目标
 2. 重新考虑职业生涯：
    - 当前的工作内容没什么挑战，意味着提升可能会比较有限，需要放弃管理技能的提升，因为不具备相应的条件
    - 绩效公平性不好，经济下行和岗位HC削减后，主体还是平衡为主吧，干多干少都差不多，劣币确实要驱逐良币了，大家都向下看齐，好处是“向下看”能很轻松
-   - 权责不对等的情况下，主观能动性越强越痛苦，只做“权内”的事情也挺好，注意力需要向技术侧转移，并做积累
+   - 权责不对等的情况下，主观能动性越强越痛苦，只做“权内”的事情也挺好，注意力需要向技术侧转移，并做积累（这该死的责任感，都9月了，还都没有向技术侧转移）
    - 看外部机会，不能在一棵树上吊死，寻求更优质的团队伙伴和成长机会
    - 主体谋求个人能力成长，不能再全部时间花在团队身上：NLP前沿>NLP算法>架构>管理
 3. 申请副高职称
-4. 技术文章：6篇，每两个月写一篇技术文章 
+4. 技术文章：6篇，每两个月写一篇技术文章 （都9月份了，1篇都没写）
 
 ### 社会责任
 1. 献血2次：
