--- a/常见命令提示.md
+++ b/常见命令提示.md
@@ -13,3 +13,9 @@ git push origin original_source
 OS	Uploading an image from clipboard	Uploading images from explorer	Uploading an image from input box
 Windows/Unix	Ctrl + Alt + U	Ctrl + Alt + E	Ctrl + Alt + O
 OsX	             Cmd + Opt + U	Cmd + Opt + E	Cmd + Opt + O
+
+
+#### github仓库信息
+- blog的github地址：https://github.com/fighting41love/fighting41love.github.io
+- orginal_source 分支：存储CV_blog的所有源文件
+- master 分支：存储所有静态页面的生成文件
